finshing my resume page

--- a/Myresume.html
+++ b/Myresume.html
@@ -10,48 +10,150 @@
 </head>
 <body>
 
-	
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<!--the navbar-->
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 			<a class="nav-link" href="home.html">Home</a>
 			<a class="nav-link" href="MyStory.html">My Story</a>
 			<a id="onpage" class="nav-link" href="Myresume.html">My Resume</a>
 			<a class="nav-link" href="contact.html">Contact Me</a>
 		</nav>
+
+		<!--the actual resume-->
+		<div class="row">
+			<div class="col-4"><img src="pic\profile.jpg" width="90%"></div>
+			<div class="col-8">
+				<div class="basicinfo">
+					<br>
+					<p><span class="Info">name: </span> Abdullah Ahmed Yaquot</p>
+					<p><span class="Info">Education: </span>Bachelor degree in Electronics and Communication Engineering.</p>
+					<p><span class="Info">Nationality: </span>Egyption.</p>
+					<p><span class="Info">Mobile: </span>+201114169900</p>
+				</div>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-4">
+				<h4>Education </h4>
+			</div>
+			<div class="col-8">
+				<p class="collage">Arab Academy for Science, Technology & Maritime Transport,<span class="smalltext"> Alexandria, Egypt</span><br><ul>
+					<li>B.Sc. Electronics and Communications Engineering, 2009 –2017.</li>
+					<li>I study Electronics subjects, analog and digital signal processing , systems communication and basic programing</li>
+				</ul></p>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-4">
+				<h4>Courses and Certifications </h4>
+			</div>
+			<div class="col-8">
+				<p>- <b>Java SE 8: </b>Fundamentals, OOP, GUI, from New Horizons computer center</p>
+				<p>- Other multiple MOOC’s on , YouTube, Udemy and others.</p>
+				<p>- <b>Udacity's one million Arab cooder</b> in full stack developing.</p>
+				<p>- Currently tacking <b>Edx's CS50</b> Web programming with Python and JavaScript</p>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-4">
+				<h4>Projects </h4>
+			</div>
+			<div class="col-8">
+				<p><b>Textile Defect Recognition: </b>An automatic textile defect recognition system tests a database of images for the textile. Several preprocessing techniques for image enhancement, feature extraction and classification for the defects like (edge detection, DCT, DWT, Artificial Neural Networks, others). A hardware implementation using Arduino UNO. Results of the classifiers are used as an input and the output is shown on a screen.</p>
+				<p><b>Search engine: </b>I work on a search engine from the ground starting from data structure and its corpus and how it work (intro to computer science class | udacity)</p>
+				<p><b>Other projects: </b>did some other projects for online courses like Udemy in front end web app.</p>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-4">
+				<h4>Professional Experience</h4>
+			</div>
+			<div class="col-8">
+				<p><b>Al Sahara TV Channel, </b>KSA, Riyadh 2013 - 2015<br><ul>
+					<li>Responsible for managing their website and social media accounts.</li>
+					<li>Graphic designing and video editing for social media accounts.</li>
+				</ul></p>
+				<p><b>national company for fisheries and aquaculture, </b>Egypt, kafr el sheikh 2017 - 2018<br><ul>
+					<li>Responsible for creating the web app with the media team</li>
+					<li>Graphic designing brochures and posters</li>
+					<li>Graphic designing and video editing for social media accounts.</li>
+				</ul></p>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-4">
+				<h4>Tools & Technologies</h4>
+			</div>
+			<div class="col-8">
+				
+					<p>- Python basic, OOP</p>
+					<p>- Java SE8.</p>
+					<p>- SQL basics</p>
+					<p>- JavaScript</p>
+					<p>- CSS and Bootstrap</p>
+					<p>- HTML 5</p>
+					<p>- Git version-control system (local - GitHub)</li>
+					<p>- JQuery</p>
+					<p>- Anglure</p>
+					<p>- PHP, basics</p>
+				
+			</div>
+		</div>
+		<br>
+		<div class="stateofcv">
+			<div class="row">
+				<div class="col-6"><p><b>Military Status: </b>Exemption.</p></div>
+				<div class="col-6"><p><b>Languages: </b>Arabic (native) – English (intermediate)</p></div>	
+			</div>
+			<div class="row">
+				<div class="col-6"><p><b>Nationality: </b>Egyptian.</p></div>
+				<div class="col-6"><p><b>Current Location: </b>Alexandria-Egypt</p></div>	
+			</div>
+		</div>
+		
+		<div class="cvdownload">
+			<a href="files\abdullas-cvsnewst.pdf" download><img src="pic\pdfdown.jpg" alt="Download My CV"></a>
+		</div>
+
+		<!--the footer-->
 		<footer class="main-footer">
       		<div class="container">
         		<div class="row">
-	
 					<div class="col-md-3">
-			            <h3>About BSBS</h3>
-			            <p>She is simply a hero , a sweet loving lady and I am creating this site to grap her attention, Her famely called her Bosbos, her lover called her basbosy, and her friends called her bsbs bsantota, also her mother in low called her basbosa.</p>
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+			        <div class="col-md-3">
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+			        <div class="col-md-3">
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+					<div class="col-md-3">
+			            <h3>WebSite info</h3>
+			            <p>This website was made for the project0 in the cs550 class in order to experiment the html, CSS, SCSS, and bootstrap. It was very helpful for practicing and learning, I tried to implement all the techniques and instructions was told to do, I tried my best, and thanks a lot for the course. </p>
 			            <p>copyright &copy; 2018</p>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
 			        </div>
 			    </div>
 			</div>
