--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
 
 	
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 			<a class="nav-link" href="home.html">Home</a>
 			<a class="nav-link" href="MyStory.html">My Story</a>
 			<a class="nav-link" href="Myresume.html">My Resume</a>
@@ -20,38 +20,37 @@
 		<footer class="main-footer">
       		<div class="container">
         		<div class="row">
-	
 					<div class="col-md-3">
-			            <h3>About BSBS</h3>
-			            <p>She is simply a hero , a sweet loving lady and I am creating this site to grap her attention, Her famely called her Bosbos, her lover called her basbosy, and her friends called her bsbs bsantota, also her mother in low called her basbosa.</p>
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+			        <div class="col-md-3">
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+			        <div class="col-md-3">
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+					<div class="col-md-3">
+			            <h3>WebSite info</h3>
+			            <p>This website was made for the project0 in the cs550 class in order to experiment the html, CSS, SCSS, and bootstrap. It was very helpful for practicing and learning, I tried to implement all the techniques and instructions was told to do, I tried my best, and thanks a lot for the course. </p>
 			            <p>copyright &copy; 2018</p>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
 			        </div>
 			    </div>
 			</div>
