--- a/home.html
+++ b/home.html
@@ -11,59 +11,51 @@
 <body>
 
 	
+		<div class="navbarmain">
+			<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+				<a id="onpage" class="nav-link" href="home.html">Home</a>
+				<a class="nav-link" href="MyStory.html">My Story</span></a>
+				<a class="nav-link" href="Myresume.html">My Resume</a>
+				<a class="nav-link" href="contact.html">Contact Me</a>
+			</nav>
+			
+		</div>
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a id="onpage" class="nav-link" href="home.html">Home</a>
-			<a class="nav-link" href="MyStory.html">My Story</span></a>
-			<a class="nav-link" href="Myresume.html">My Resume</a>
-			<a class="nav-link" href="contact.html">Contact Me</a>
-		</nav>
-
-		<div class="row">
-			<div class="col-4"><img src="pic\profile.jpg" width="70%"></div>
-			<div class="col-8">
-				<div>
-					<h1 id="title">My Info</h1>
-					<p><span class="Info">name: </span> Abdullah Ahmed Yaquot</p>
-					<p><span class="Info">Education: </span>Bachelor degree in Electronics and Communication Engineering.</p>
-					<p><span class="Info">summary: </span>Shiffted to Back-end developing</p>
-				</div>
-			</div>
+		
 		<footer class="main-footer">
       		<div class="container">
         		<div class="row">
-	
 					<div class="col-md-3">
-			            <h3>About BSBS</h3>
-			            <p>She is simply a hero , a sweet loving lady and I am creating this site to grap her attention, Her famely called her Bosbos, her lover called her basbosy, and her friends called her bsbs bsantota, also her mother in low called her basbosa.</p>
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+			        <div class="col-md-3">
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+			        <div class="col-md-3">
+			            <ul class="list-unstyled">
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="#">Footer Link</a></li>
+			            </ul>
+			        </div>
+					<div class="col-md-3">
+			            <h3>WebSite info</h3>
+			            <p>This website was made for the project0 in the cs550 class in order to experiment the html, CSS, SCSS, and bootstrap. It was very helpful for practicing and learning, I tried to implement all the techniques and instructions was told to do, I tried my best, and thanks a lot for the course. </p>
 			            <p>copyright &copy; 2018</p>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
-			        </div>
-			        <div class="col-md-3">
-			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			            </ul>
 			        </div>
 			    </div>
 			</div>
