--- a/home.html
+++ b/home.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
 	<title>Home | my web site</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css\stylemyweb.css">
+	<link rel="stylesheet" type="text/css" href="css\slidercss.css">
+	<style>
+		.mySlides {display:none;}
+	</style>
+
+
 </head>
 <body>
 
@@ -20,8 +28,91 @@
 			</nav>
 			
 		</div>
+		<!--this is the cards-->
+		<div class="row cardrow">
+			<div class="col-4">
+				<div class="cardofhappit">
+					<img src="" width="100%" alt="avatar">
+					<div class="cardbody">
+						<h4>Boxing</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="cardofhappit">
+					<img src="" alt="avatar" width="100%">
+					<div class="cardbody">
+						<h4>Boxing</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="cardofhappit">
+					<img src="" alt="avatar" width="100%">
+					<div class="cardbody">
+						<h4>Boxing</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row cardrow">
+			<div class="col-4">
+				<div class="cardofhappit">
+					<img src="" alt="avatar" width="100%">
+					<div class="cardbody">
+						<h4>Boxing</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="cardofhappit">
+					<img src="" alt="avatar" width="100%">
+					<div class="cardbody">
+						<h4>Boxing</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="cardofhappit">
+					<img src="" alt="avatar" width="100%">
+					<div class="cardbody">
+						<h4>Boxing</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--this is the photo slider-->
+
+
+		<div class="slider displayslider">
+
+			<div class="w3-display-container mySlides">
+			  <img src="" style="width:100%">
+			  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+			    AAST chalethtanic
+			  </div>
+			</div>
+			<div class="mySlides">
+			  <img src="" style="width:100%">
+			  <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+			    awfaf chalethtanic
+			  </div>
+			</div>
+			
+			<button class="movebtn" onclick="plusDivs(-1)">&#10094;</button>
+			<button class="movebtn" onclick="plusDivs(1)">&#10095;</button>
+
+		</div>
 
 		
+		<!--this is the footer-->
 		<footer class="main-footer">
       		<div class="container">
         		<div class="row">
@@ -60,7 +151,26 @@
 			    </div>
 			</div>
 		</footer>	
+<script>
 	
+	var slideIndex = 1;
+	showDivs(slideIndex);
+
+	function plusDivs(n) {
+	showDivs(slideIndex += n);
+	}
+
+	function showDivs(n) {
+		var i;
+		var x = document.getElementsByClassName("mySlides");
+		if (n > x.length) {slideIndex = 1}    
+		if (n < 1) {slideIndex = x.length}
+		for (i = 0; i < x.length; i++) {
+		    x[i].style.display = "none";  
+		}
+		x[slideIndex-1].style.display = "block";  
+		}
+	</script>		
 
 </body>
 </html>
