here  I add the home contect and the contact

--- a/Myresume.html
+++ b/Myresume.html
@@ -20,7 +20,7 @@
 
 		<!--the actual resume-->
 		<nav class="floating-menu">
-    		<h3>Sections</h3>
+    		<h style="font-weight: bold; font-size: 18px; color: white;" >Sections</h3>
     		<a href="#inf">the head of my resume</a>
     		<a href="#educat">Education</a>
     		<a href="#cors">Courses and Certifications</a>
