--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,36 @@
 			<a class="nav-link" href="Myresume.html">My Resume</a>
 			<a id="onpage" class="nav-link" href="contact.html">Contact Me</a>
 		</nav>
+
+		<!--here is the form-->
+		<form>
+			<ul class="form-style-1">
+    			<li>
+    				<label>Full Name <span class="required">*</span></label><input type="text" name="field1" class="field-divided" placeholder="First" /> <input type="text" name="field2" class="field-divided" placeholder="Last" />
+    			</li>
+    			<li>
+        			<label>Email <span class="required">*</span></label>
+       				<input type="email" name="field3" class="field-long" />
+    			</li>
+    			<li>
+        			<label>Subject</label>
+        			<select name="field4" class="field-select">
+        				<option value="Advertise">Advertise</option>
+        				<option value="work">Work</option>
+        				<option value="General Question">General</option>
+        			</select>
+    			</li>
+    			<li>
+        			<label>Your Message <span class="required">*</span></label>
+        			<textarea name="field5" id="field5" class="field-long field-textarea"></textarea>
+    			</li>
+    			<li>
+        			<input type="submit" value="Submit" />
+    			</li>
+			</ul>
+		</form>
+
+
 		<footer class="main-footer">
       		<div class="container">
         		<div class="row">
