adding the content of mystory.html

--- a/MyStory.html
+++ b/MyStory.html
@@ -18,6 +18,53 @@
 			<a class="nav-link" href="contact.html">Contact Me</a>
 		</nav>
 	</div>
+
+	<div class="row">
+		<div class="col-4">
+			<h3>Born in Egypt</h3>
+		</div>
+		<div class="col-8">
+			<p>in the 1991th of march I was born in a cost city called Ismaileia, my parent are from egypt my father were from the same city I born in, but my mother was from Alexandria, after 2 month he left to saudi aribia so he can provide to us, shorlty after that me and my mother moved to alexandria </p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4">
+			<h3>Raised in Saudi</h3>
+		</div>
+		<div class="col-8">
+			<p>After my first 2 years in life witch ovusly i had no memory or at leat clear one, me and my mom moved to reyadh, and I contnue to live there until i finshed my fist year in elementry school, then we go to vist egypt for the first time and it was confusing it dosent mean that much at the time.</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4">
+			<h3>the conflict</h3>
+		</div>
+		<div class="col-8">
+			<p>I hade that conflict of my nationality, in egypt they call me saudi boy abd in saudi they call me egyption boy and it was not good at the time i felt like I dont beloge to any one, I think that's what made me today</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4">
+			<h3>Atcheavement</h3>
+		</div>
+		<div class="col-8">
+			<p>I had not that much of atcheavment, but: <ul><li>I did lose 50 kilogram of my wight and I get the body shape I dreamed of, it was ammazing<br> <img width="40%" src="pic/shape.PNG"></li> <li>I have the girl I always dream of she is the sweetest thing ever. <br> <img width="40%" src="pic/love2.JPG"></li>  </ul> </p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4">
+			<h3>What life mean to me</h3>
+		</div>
+		<div class="col-8">
+			<p>life mean the good time the good friend the love you give and reseave, the suffer and the pain you feel and its a journy we choose to live it or not.</p>
+		</div>
+	</div>
+
+
+
+
+
+
 	<footer class="main-footer">
       		<div class="container">
         		<div class="row">
