adding the scoial media accounts

--- a/Myresume.html
+++ b/Myresume.html
@@ -140,31 +140,23 @@
         		<div class="row">
 					<div class="col-md-3">
 			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="https://www.facebook.com/Mena.mena201573"><img width="20%" src="pic/scotial/face.jpg"></a></li>
+		
 			            </ul>
 			        </div>
 			        <div class="col-md-3">
 			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="https://myaccount.google.com/?utm_source=OGB&utm_medium=app"><img width="20%" src="pic/scotial/gmail.png"></a></li>
+		
 			            </ul>
 			        </div>
 			        <div class="col-md-3">
 			            <ul class="list-unstyled">
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
-			              <li><a href="#">Footer Link</a></li>
+			              <li><a href="https://www.linkedin.com/in/yaquot/"><img width="20%" src="pic/scotial/in.png"></a></li>
+		
 			            </ul>
 			        </div>
+			       
 					<div class="col-md-3">
 			            <h3>WebSite info</h3>
 			            <p>This website was made for the project0 in the cs550 class in order to experiment the html, CSS, SCSS, and bootstrap. It was very helpful for practicing and learning, I tried to implement all the techniques and instructions was told to do, I tried my best, and thanks a lot for the course. </p>
