adding the photos and the slidecss

--- a/Myresume.html
+++ b/Myresume.html
@@ -25,14 +25,14 @@
     		<a href="#educat">Education</a>
     		<a href="#cors">Courses and Certifications</a>
     		<a href="#pro">Projects</a>
-    		<a href="#pro1">Professional Experience</a>
+    		<a href="#Pro1">Professional Experience</a>
     		<a href="#tools">Tools & Technologies</a>
     		<a href="#down">Download the Resume</a>
   		</nav>
 		
 		<div class="cvbody">
 			<div class="row cvheder">
-				<div class="col-4"><img src="pic\profile.jpg" width="90%"></div>
+				<div id="inf" class="col-4"><img src="pic\profile.jpg" width="90%"></div>
 				<div class="col-8">
 					<div id="inf" class="basicinfo">
 						<br>
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 			<br>
-			<div class="row">
+			<div id="educat" class="row">
 				<div class="col-4">
 					<h4 id="educat">Education </h4>
 				</div>
